<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.wehubs.weservice.Registeration.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="Register"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/colorPrimary" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center|top"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/wehubsinnovations" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:hint="@string/first_name"
            android:padding="8dp" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:hint="@string/last_name"
            android:padding="8dp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:hint="@string/user_name"
            android:padding="8dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp" />
        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="8dp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/colorPrimary"
                app:layout_anchorGravity="bottom|center"
                app:srcCompat="@drawable/ic_action_accept" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:visibility="gone" />
        </FrameLayout>

    </LinearLayout>

    <Button
        android:id="@+id/login_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="Signup with Facebook"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:padding="8dp"
        android:onClick="backToLogin"
        android:text="Back to Login"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorPrimary" />
</RelativeLayout>
    </ScrollView>
